Se modifica la funcion de mostrar edad

--- a/TPN5/generacios/index.html
+++ b/TPN5/generacios/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main class="container-fluid mt-5 ">
-        <section class="bg-secondary p-3 rounded text-light w-75 mx-auto ">
+        <section class="bg-dark p-3 rounded text-light w-75 mx-auto ">
             <form class="row g-3 needs-validation " novalidate id="formulario">
                 <fieldset class="w-50">
                     <label for="inputNombre" class="form-label">Nombre</label>
@@ -78,7 +78,7 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 
-        <script type="module" src="./app.js"></script>
+        <script type="module" src="./js/app.js"></script>
 </body>
 
 </html>
