--- a/TPN5/generacios/index.html
+++ b/TPN5/generacios/index.html
@@ -13,6 +13,7 @@
     <title>Generaciones</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <link rel="stylesheet" href="./estilos/estilo.css">
 </head>
 
 <body>
@@ -89,7 +90,10 @@
               </table>
         </section>
     </main>
-
+    <div class="text-center mt-5">
+        <a href="../index.html" class="button " > Inicio
+        </a>
+      </div>
     <footer class="bg-dark py-5 text-light">
         <section class="container text-center">
             <p>Ejercicio de Generaciones realizado por Cardozo Martin</p>
