--- a/TPN5/numeroMagico/index.html
+++ b/TPN5/numeroMagico/index.html
@@ -15,6 +15,10 @@
     <input type="number" id="numeroEntrada">
     <button id="comprobar">Verificar</button>
     <p id="mensaje"></p>
+    <div class="text-center">
+        <a href="../index.html" class="button " > Inicio
+        </a>
+      </div>
 
     <script src="./app.js"></script>
 </body>
