se agrega la fecha al reloj

--- a/TPN5/Reloj/index.html
+++ b/TPN5/Reloj/index.html
@@ -19,6 +19,7 @@
   
 <section>
   <div class="container">
+    <p id="fecha"></p>
     <div class="display" id="date"></div>
     <div class="buttons">
       <button ></button>
